<resources>
    <string name="app_name">Test1</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loading_dialog">Loading..</string>

</resources>
